@@ -48,5 +48,5 @@ void test01()
 // { dg-error "required from here" "" { target *-*-* } 40 }
 // { dg-error "required from here" "" { target *-*-* } 42 }
 
-// { dg-error "invalid use of incomplete type" "" { target *-*-* } 1483 }
-// { dg-error "declaration of" "" { target *-*-* } 1447 }
+// { dg-error "invalid use of incomplete type" "" { target *-*-* } 1484 }
+// { dg-error "declaration of" "" { target *-*-* } 1448 }
