@@ -1,3 +1,15 @@
+2012-03-27  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	* include/std/type_traits (result_of): Fix handling of cv-quals.
+	* testsuite/20_util/result_of/1.cc: New.
+	* testsuite/20_util/result_of/2.cc: New.
+	* testsuite/20_util/declval/requirements/1_neg.cc: Adjust dg-error
+	line numbers.
+	* testsuite/20_util/make_signed/requirements/typedefs_neg.cc:
+	Likewise.
+	* testsuite/20_util/make_unsigned/requirements/typedefs_neg.cc:
+	Likewise.
+
 2012-03-23  David S. Miller  <davem@davemloft.net>
 
 	* config/abi/post/sparc-linux-gnu/baseline_symbols.txt: Update.
